[package]
name = "ucx_ex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-ucx = { version = "0.1.1", features = ["am"] }
env_logger = "0.11.3"
tokio = { version = "1.29.1", features = [
    "rt-multi-thread",
    "macros",
    "time",
    "fs",
    "sync",
    "rt",
] }
